fixed error + refactor